--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
   </head>
   <body style="background-color: #24094A;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1 class='text-white text-center py-6'><span class=' font-bold'>Al</span>Firma</h1>
     <div id="root"></div>
+    <div style="box-shadow: 0 0 200px 100px white; opacity: 0.4; right: 0; top: 3.5rem; position: fixed; background-color: white; border-radius: 100%;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
