--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>Al Firma</title>
   </head>
-  <body style="background-color: #24094A;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
