--- a/public/index.html
+++ b/public/index.html
@@ -7,25 +7,25 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Al Firma, votre agence experte en développement d'applications mobiles et web, vous accompagne de l'idée à la mise en marché de votre projet. Solutions personnalisées, support technique et conseil stratégique."
+      content="Al Firma, votre agence experte en développement d'application mobile et web, vous accompagne de l'idée à la mise en marché de votre projet. Solutions personnalisées, support technique et conseil stratégique."
     />
     <meta name="google-site-verification" content="IOj81QGQJuPWZ9jeC_pOHCHOhWy3Jjb8qTdLqHOPV14" />
       <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.alfirma.com/" />
-    <meta property="og:title" content="Al Firma - Développement d'applications mobiles et web" />
+    <meta property="og:title" content="Al Firma - Développement d'application mobile et web" />
     <meta property="og:description" content="Al Firma vous accompagne tout au long du processus de développement de votre application mobile & web." />
     <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://www.alfirma.com/" />
-    <meta name="twitter:title" content="Al Firma - Développement d'applications mobiles et web" />
+    <meta name="twitter:title" content="Al Firma - Développement d'application mobile et web" />
     <meta name="twitter:description" content="Al Firma vous accompagne tout au long du processus de développement de votre application mobile & web." />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
     <link href="%PUBLIC_URL%/output.css" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Al Firma - Votre agence experte en développement d'applications mobiles et web</title>
+    <title>Al Firma - Votre agence experte en développement d'application mobile et web</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
